# ccdc_data

./: .env.examle  .gitignore  README.md  app.py  constant.py  index.py  input.csv  pyproject.toml  worker.py
cli/: addAllTypesByCSV.py
services/: __init__.py  addAllTypes.py
typesBody/: Blue.py  Brightness.py  EVI.py  EVI2.py  GV.py  Green.py  Greenness.py  NBR.py  NDFI.py  NDVI.py  NIR.py  NPV.py  Red.py  SWIR1.py  SWIR2.py  Shade.py  Soil.py  Wetness.py  __init__.py
worker/: __init__.py  fetch_ccdc.py  query_processing.py
